--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-# Modo produccion: 'production
+# Modo produccion: 'production'
 # Modo desarrollo: 'dev'
 
-NEXT_PUBLIC_ENV='dev'
+NEXT_PUBLIC_ENV='production'
 NEXT_PUBLIC_BASE_PATH='/shop'
