--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 # Modo produccion: 'production'
 # Modo desarrollo: 'dev'
 
-NEXT_PUBLIC_ENV='dev'
+NEXT_PUBLIC_ENV='production'
 NEXT_PUBLIC_BASE_PATH='/shop'
 
 # Credenciales de administrador
