--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.10"
+    "@types/jsonwebtoken": "^9.0.10",
+    "dotenv": "^17.2.1"
   }
 }
